UI overflow fix

--- a/src/app/nav-tabs/nav-tabs.component.scss
+++ b/src/app/nav-tabs/nav-tabs.component.scss
@@ -10,7 +10,3 @@
   }
 
 }
-
-section {
-  margin-top: 25%;
-}
